Implemented "class names for styles: gpii-<componentName>-<rest of class name>", round #3.

--- a/src/shared/adjusters/css/style.css
+++ b/src/shared/adjusters/css/style.css
@@ -32,7 +32,7 @@ body {
     margin:20px;
 }
 
-.preference {
+.gpii-preferenceGroup {
     background:#ECEFEF;
     width: 340px;
     min-height: 100px;
