--- a/src/shared/adjusters/css/style.css
+++ b/src/shared/adjusters/css/style.css
@@ -44,11 +44,11 @@ body {
     font-family: 'Open Sans', sans-serif;
 }
 
-.fl-uiOptions label::first-letter {
+.gpii-prefsEditor label::first-letter {
     text-transform: capitalize;
 }
 
-.fl-uiOptions label {
+.gpii-prefsEditor label {
     font-size: 0.8em;
 }
 
@@ -188,22 +188,22 @@ input[type=checkbox], input[type=radio] {
 /*
     The slider's style
 */
-.fl-uiOptions .gpii-slider-horz {
+.gpii-prefsEditor .gpii-slider-horz {
     width: calc(330 * 0.8px - 2em);
     margin: 2px !important;
     margin-bottom: 0.7em !important;
 }
 
-.fl-uiOptions .gpii-slider a {
+.gpii-prefsEditor .gpii-slider a {
     //background: radial-gradient(circle 14.5px at 14.5px 50%, #566374 6px, white 8px);
     border: 1px solid #566374;
 }
 
-.fl-uiOptions .ui-slider-range {
+.gpii-prefsEditor .ui-slider-range {
     background-color: #17a9b8;
 }
 
-.fl-uiOptions .gpii-slider a {
+.gpii-prefsEditor .gpii-slider a {
     box-shadow: none;
 }
 
@@ -350,10 +350,10 @@ input[type=checkbox], input[type=radio] {
 /*
     Style for magnifier position indicator
 */
-.fl-uiOptions .gpii-choice input:checked + div:before {
+.gpii-prefsEditor .gpii-choice input:checked + div:before {
     content: "\e007";
 }
-.fl-uiOptions .gpii-choice .gpii-indicator {
+.gpii-prefsEditor .gpii-choice .gpii-indicator {
     font-family: 'icons-no-frames-aug-29' !important;
     font-size: 0.8em;
      color: #636c7c;
@@ -669,7 +669,7 @@ input:checked + .gpii-addToMyPreferencesStar + .gpii-addToMyPreferencesLabel[tit
     color: gray !important;
 }
 
-.gpii-theme-yb .fl-uiOptions input:focus + label, .gpii-theme-yb .fl-uiOptions .gpii-choice input:focus ~ label {
+.gpii-theme-yb .gpii-prefsEditor input:focus + label, .gpii-theme-yb .gpii-prefsEditor .gpii-choice input:focus ~ label {
     outline: none !important;
 }
 
